<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="net.emrekalkan.todolistapp.ui.addTodo.TodoItemAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/todoItemAddTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="text"
            android:maxLength="32"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/todoItemAddDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLength="32"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="@id/todoItemAddTitle"
            app:layout_constraintStart_toStartOf="@id/todoItemAddTitle"
            app:layout_constraintTop_toBottomOf="@id/todoItemAddTitle" />

        <EditText
            android:id="@+id/todoItemAddDeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="none"
            android:hint="@string/deadline"
            android:focusable="false"
            android:onClick="@{() -> viewModel.deadlineClicked()}"
            app:layout_constraintEnd_toEndOf="@id/todoItemAddDescription"
            app:layout_constraintStart_toStartOf="@id/todoItemAddDescription"
            app:layout_constraintTop_toBottomOf="@id/todoItemAddDescription" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:onClick="@{() -> viewModel.create()}"
            app:layout_constraintTop_toBottomOf="@id/todoItemAddDeadline"
            app:layout_constraintEnd_toEndOf="@id/todoItemAddDeadline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>