<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="net.emrekalkan.todolistapp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{safeUnbox(viewModel.layoutType) == 0 ? View.VISIBLE : View.GONE}">

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="64dp"
                android:ems="10"
                android:hint="@string/loginUsernameHint"
                android:text="Madman"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/loginPasswordHint"
                android:text="123456"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/loginUsername"
                app:layout_constraintStart_toStartOf="@+id/loginUsername"
                app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

            <Button
                android:id="@+id/loginSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/loginSignIn"
                android:onClick="@{() -> viewModel.signIn()}"
                app:layout_constraintEnd_toEndOf="@+id/loginPassword"
                app:layout_constraintStart_toStartOf="@+id/loginPassword"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loginSignUpText"
                android:onClick="@{() -> viewModel.textSignUpClicked()}"
                app:layout_constraintEnd_toEndOf="@+id/loginSignIn"
                app:layout_constraintStart_toStartOf="@+id/loginSignIn"
                app:layout_constraintTop_toBottomOf="@+id/loginSignIn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{safeUnbox(viewModel.layoutType) == 1 ? View.VISIBLE : View.GONE}">

            <EditText
                android:id="@+id/signupUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="64dp"
                android:ems="10"
                android:hint="@string/loginUsernameHint"
                android:text="Madman"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signupPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/loginPasswordHint"
                android:text="123456"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/signupUsername"
                app:layout_constraintStart_toStartOf="@+id/signupUsername"
                app:layout_constraintTop_toBottomOf="@+id/signupUsername" />

            <EditText
                android:id="@+id/signupPasswordRepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/loginPasswordRepeat"
                android:inputType="textPassword"
                android:text="123456"
                app:layout_constraintEnd_toEndOf="@+id/signupPassword"
                app:layout_constraintStart_toStartOf="@+id/signupPassword"
                app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/loginSignUp"
                android:onClick="@{() -> viewModel.signUp()}"
                app:layout_constraintEnd_toEndOf="@+id/signupPasswordRepeat"
                app:layout_constraintStart_toStartOf="@+id/signupPasswordRepeat"
                app:layout_constraintTop_toBottomOf="@+id/signupPasswordRepeat" />

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loginSignInText"
                android:onClick="@{() -> viewModel.textSignInClicked()}"
                app:layout_constraintEnd_toEndOf="@+id/buttonSignup"
                app:layout_constraintStart_toStartOf="@+id/buttonSignup"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>